# OT-AI

./: .env.example  .gitignore  DESIGN.md  LICENSE  Makefile  README.md  app.js  apprenticeship.html  aptitude-data.js  aptitude.js  docs.html  feeder-monitor.html  index.html  knowledge-gen.js  learn.html  manifest.webmanifest  project.html  pyproject.toml  robots.txt  sitemap.xml  study-data.js  study.html  study.js  styles.css  sw.js
demo/: INFOGRAPHIC.md  README.md  sample-report.md
ics_sentinel/: __init__.py  attack_map.py  config.py  demo.py  detection.py  generator.py  incidents.py  modbus.py  pcap.py  report.py  triage.py
tests/: test_attack_map.py  test_detection.py  test_generator.py  test_incidents.py  test_pcap.py  test_report.py  test_scenarios.py  test_triage.py
