[project]
name = "ics-sentinel"
version = "0.1.0"
description = "AI-augmented anomaly detection and incident triage for Modbus TCP industrial control traffic"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# The pipeline runs stdlib-only (plain report + [MOCK] triage). These two
# unlock the full experience: rich terminal report + real AI triage.
dependencies = ["rich>=13.0", "anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pcap = ["scapy>=2.5"]  # optional: analyze real captures via --pcap

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ics_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
